[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "1.4.22"
asyncpg = "^=0.25.0"
PyYAML = "^5.4.1"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
aioredis = "1.3.1"
APScheduler = "3.7.0"
loguru = "0.6.0"
openpyxl = "^3.0.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
python-multipart = "^0.0.5"
bcrypt = "^3.2.0"
mcrcon = "^0.7.0"
aiogram = "3.0.0b3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
