[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "1.4.22"
asyncpg = "^=0.25.0"
PyYAML = "^5.4.1"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
APScheduler = "3.7.0"
loguru = "0.6.0"
openpyxl = "^3.0.9"
mcrcon = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
